--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
           </li>
           <li class="flex items-center gap-2">
             <a
-              href="Meet%20Modasiya%20Resume%20Faang.pdf"
+              href="Assets/Meet%20Modasiya%20Resume%20Faang.pdf"
               target="_blank"
               rel="noopener"
               class="hover:text-green-400 transition-colors"
               >Resume</a
             >
-            <a
-              href="Meet%20Modasiya%20Resume%20Faang.pdf"
+            <!-- <a
+              href="Assets/Meet%20Modasiya%20Resume%20Faang.pdf"
               download
               title="Download Resume"
               class="text-gray-400 hover:text-green-400 transition-colors"
               ><i class="fa-solid fa-download"></i
-            ></a>
+            ></a> -->
           </li>
           <li>
             <a href="#about" class="hover:text-green-400 transition-colors"
@@ -70,21 +70,15 @@
 
     <div
       id="mobileMenu"
-      class="md:hidden fixed top-16 inset-x-0 mx-4 rounded-lg border border-slate-200 bg-white/95 backdrop-blur p-4 hidden shadow-lg"
+      class="md:hidden fixed top-16 inset-x-0 mx-4 rounded-lg border border-slate-200 backdrop-blur p-4 hidden shadow-lg"
     >
       <a href="#home" class="block py-2 hover:text-emerald-600">Home</a>
       <a
-        href="Meet%20Modasiya%20Resume%20Faang.pdf"
+        href="Assets/Meet%20Modasiya%20Resume%20Faang.pdf"
         target="_blank"
         rel="noopener"
         class="block py-2 hover:text-emerald-600"
         >Resume</a
-      >
-      <a
-        href="Meet%20Modasiya%20Resume%20Faang.pdf"
-        download
-        class="block py-2 hover:text-emerald-600"
-        >Download Resume</a
       >
       <a href="#about" class="block py-2 hover:text-emerald-600">About</a>
       <a href="#projects" class="block py-2 hover:text-emerald-600">Projects</a>
@@ -129,10 +123,7 @@
         </div>
       </section>
 
-      <section
-        id="about"
-        class="py-20 px-4 max-w-5xl mx-auto "
-      >
+      <section id="about" class="py-20 px-4 max-w-5xl mx-auto">
         <h2
           class="text-3xl font-semibold mb-6 reveal bg-clip-text text-transparent bg-gradient-to-r from-emerald-600 to-teal-500"
           data-reveal="fade-up"
@@ -166,70 +157,80 @@
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 0ms"
-          ><i class="fa-brands fa-html5"></i>
+          >
+            <i class="fa-brands fa-html5"></i>
             HTML5
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 80ms"
-          ><i class="fa-brands fa-css3"></i>
+          >
+            <i class="fa-brands fa-css3"></i>
             CSS3 / Tailwind
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 160ms"
-          ><i class="fa-brands fa-js"></i>
+          >
+            <i class="fa-brands fa-js"></i>
             JavaScript
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 240ms"
-          ><i class="fa-brands fa-react"></i>
+          >
+            <i class="fa-brands fa-react"></i>
             React
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 240ms"
-          ><i class="fa-brands fa-php"></i>
+          >
+            <i class="fa-brands fa-php"></i>
             PHP
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 240ms"
-          ><i class="fa-solid fa-server"></i>
+          >
+            <i class="fa-solid fa-server"></i>
             MySQL
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 240ms"
-          ><i class="fa-solid fa-laptop-code"></i>
+          >
+            <i class="fa-solid fa-laptop-code"></i>
             .NET
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 240ms"
-          ><i class="fa-brands fa-bootstrap"></i>
+          >
+            <i class="fa-brands fa-bootstrap"></i>
             BootStrap
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 240ms"
-          ><i class="fa-brands fa-shopify"></i>
+          >
+            <i class="fa-brands fa-shopify"></i>
             Shopify
           </div>
           <div
             class="p-4 rounded-lg border border-white/10 reveal hover:scale-[1.02] transition-transform hover:border-emerald-400/40"
             data-reveal="scale-in"
             style="--delay: 240ms"
-          ><i class="fa-solid fa-camera"></i>
+          >
+            <i class="fa-solid fa-camera"></i>
             Illustrator
           </div>
         </div>
@@ -305,15 +306,13 @@
             </div>
           </article>
 
-
           <!-- FoxPlay  -->
           <article
             class="rounded-xl border border-white/10 overflow-hidden hover:border-emerald-400/50 transition-all hover:shadow-lg hover:shadow-emerald-900/20 hover:-translate-y-0.5 reveal"
             data-reveal="scale-in"
             style="--delay: 240ms"
           >
-            <div class="aspect-video h-min
-            bg-neutral-800">
+            <div class="aspect-video h-min bg-neutral-800">
               <img
                 src="assets/Foxplay.jpg"
                 alt="Zentry Demo preview"
@@ -322,7 +321,9 @@
             </div>
             <div class="p-4">
               <h3 class="font-semibold">FoxPlay Clothing</h3>
-              <p class="text-sm text-gray-400">Live E-Commerce Clothing Website</p>
+              <p class="text-sm text-gray-400">
+                Live E-Commerce Clothing Website
+              </p>
               <a
                 href="https://www.foxplayclothing.com/"
                 target="_blank"
